--- a/pages/about.html
+++ b/pages/about.html
@@ -21,8 +21,13 @@ permalink: /about/
       </div>
 
       <div class="space-y-12">
-        {%- assign team_sorted = site.team | sort: "order" -%}
-        {%- if team_sorted.size == 0 -%}
+        {%- if site.team and site.team != empty -%}
+          {%- assign team_sorted = site.team | sort: "order" -%}
+        {%- else -%}
+          {%- assign team_sorted = nil -%}
+        {%- endif -%}
+
+        {%- if team_sorted == nil -%}
           <!-- Simple skeleton if you haven't added team yet -->
           <div class="flex flex-col md:flex-row items-center gap-8">
             <div class="w-32 h-32 rounded-full" style="background-color: var(--border);"></div>
@@ -35,35 +40,37 @@ permalink: /about/
           </div>
         {%- endif -%}
 
-        {%- for member in team_sorted -%}
-          <div class="flex flex-col md:flex-row items-center text-center md:text-left gap-8">
-            <img
-              src="{{ member.headshot | default: '/assets/images/team/pfp.webp' | relative_url }}"
-              alt="{{ member.name | escape }}"
-              class="w-32 h-32 rounded-full object-cover shadow-lg">
-            <div class="flex-1">
-              <h3 class="text-2xl font-bold"
-                  style="font-family: var(--font-display); color: var(--text);">
-                {{ member.name }}
-              </h3>
-              {%- if member.role -%}
-              <p class="text-lg font-medium mb-3" style="color: var(--accent);">
-                {{ member.role }}
-              </p>
-              {%- endif -%}
-
-              {%- if member.bio -%}
-                <p class="leading-relaxed" style="color: var(--text-muted);">
-                  {{ member.bio }}
+        {%- if team_sorted -%}
+          {%- for member in team_sorted -%}
+            <div class="flex flex-col md:flex-row items-center text-center md:text-left gap-8">
+              <img
+                src="{{ member.headshot | default: '/assets/images/team/pfp.webp' | relative_url }}"
+                alt="{{ member.name | escape }}"
+                class="w-32 h-32 rounded-full object-cover shadow-lg">
+              <div class="flex-1">
+                <h3 class="text-2xl font-bold"
+                    style="font-family: var(--font-display); color: var(--text);">
+                  {{ member.name }}
+                </h3>
+                {%- if member.role -%}
+                <p class="text-lg font-medium mb-3" style="color: var(--accent);">
+                  {{ member.role }}
                 </p>
-              {%- elsif member.content -%}
-                <div class="leading-relaxed" style="color: var(--text-muted);">
-                  {{ member.content | markdownify }}
-                </div>
-              {%- endif -%}
+                {%- endif -%}
+
+                {%- if member.bio -%}
+                  <p class="leading-relaxed" style="color: var(--text-muted);">
+                    {{ member.bio }}
+                  </p>
+                {%- elsif member.content -%}
+                  <div class="leading-relaxed" style="color: var(--text-muted);">
+                    {{ member.content | markdownify }}
+                  </div>
+                {%- endif -%}
+              </div>
             </div>
-          </div>
-        {%- endfor -%}
+          {%- endfor -%}
+        {%- endif -%}
       </div>
     </div>
   </section>
