--- a/pages/about.html
+++ b/pages/about.html
@@ -28,7 +28,7 @@ permalink: /about/
         {%- endif -%}
 
         {%- if team_sorted == nil -%}
-          <!-- Simple skeleton if you haven't added team yet -->
+          <!-- Skeleton shown if collection missing/empty -->
           <div class="flex flex-col md:flex-row items-center gap-8">
             <div class="w-32 h-32 rounded-full" style="background-color: var(--border);"></div>
             <div class="flex-1">
