--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,16 @@
   <meta property="og:title" content="Contact Wrenley Built">
   <meta property="og:description" content="Schedule a consultation for stonework, pavers, and walkways in Bend, OR.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-username.github.io/eclogue/contact.html">
-  <meta property="og:image" content="https://your-username.github.io/eclogue/assets/img/hero-illustration.svg">
+  <meta property="og:url" content="https://your-username.github.io/wrenley/contact.html">
+  <meta property="og:image" content="https://your-username.github.io/wrenley/assets/img/projects/1.2.jpeg">
   <meta name="twitter:card" content="summary_large_image">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MasonryContractor",
     "name": "Wrenley Built",
-    "url": "https://your-username.github.io/eclogue/",
-    "image": "https://your-username.github.io/eclogue/assets/img/logo-placeholder.svg",
+    "url": "https://your-username.github.io/wrenley/",
+    "image": "https://your-username.github.io/wrenley/assets/img/projects/1.2.jpeg",
     "telephone": "+1-541-555-0130",
     "address": {
       "@type": "PostalAddress",
