--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
   <meta property="og:title" content="Wrenley Built | Bend OR Stonemasonry & Paver Specialists">
   <meta property="og:description" content="Stonework that endures. Premium stonemasonry, pavers, and walkways in Bend, Oregon.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-username.github.io/eclogue/">
-  <meta property="og:image" content="https://your-username.github.io/eclogue/assets/img/hero-illustration.svg">
+  <meta property="og:url" content="https://your-username.github.io/wrenley/">
+  <meta property="og:image" content="https://your-username.github.io/wrenley/assets/img/projects/1.3.jpeg">
   <meta name="twitter:card" content="summary_large_image">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MasonryContractor",
     "name": "Wrenley Built",
-    "url": "https://your-username.github.io/eclogue/",
-    "image": "https://your-username.github.io/eclogue/assets/img/logo-placeholder.svg",
+    "url": "https://your-username.github.io/wrenley/",
+    "image": "https://your-username.github.io/wrenley/assets/img/projects/1.3.jpeg",
     "telephone": "+1-541-555-0130",
     "address": {
       "@type": "PostalAddress",
@@ -50,23 +50,7 @@
         <a href="contact.html">Contact</a>
       </nav>
     </div>
-  </header>
-  <main>
-    <section class="hero" data-parallax>
-      <div class="hero__overlay"></div>
-      <div class="hero__content container">
-        <h1>Stonework that endures</h1>
-        <p class="lead">Premium stonemasonry, pavers, and walkways in Bend, Oregon.</p>
-        <div class="cta-row" role="group" aria-label="Primary call to actions">
-          <a class="btn btn-primary" href="contact.html#quote">Get a quote</a>
-          <a class="btn btn-outline" href="projects.html">View projects</a>
-        </div>
-        <div class="trust-badges">
-          <span>Licensed &amp; insured</span>
-          <span>Engineered bases</span>
-          <span>Winter-ready installs</span>
-          <span>Clean site management</span>
-        </div>
+@@ -70,51 +70,51 @@
       </div>
     </section>
 
@@ -92,7 +76,7 @@
           </ul>
         </div>
         <div>
-          <img src="assets/img/textures.svg" alt="Detail of stone texture" loading="lazy">
+          <img src="assets/img/projects/2.2.jpeg" alt="Stone steps built along the Deschutes" loading="lazy">
         </div>
       </div>
     </section>
