--- a/projects.html
+++ b/projects.html
@@ -15,16 +15,16 @@
   <meta property="og:title" content="Projects | Wrenley Built">
   <meta property="og:description" content="Filter Wrenley Built projects by masonry, pavers, walkways, steps, patios, and retaining walls.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-username.github.io/eclogue/projects.html">
-  <meta property="og:image" content="https://your-username.github.io/eclogue/assets/img/hero-illustration.svg">
+  <meta property="og:url" content="https://your-username.github.io/wrenley/projects.html">
+  <meta property="og:image" content="https://your-username.github.io/wrenley/assets/img/projects/2.7.jpeg">
   <meta name="twitter:card" content="summary_large_image">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MasonryContractor",
     "name": "Wrenley Built",
-    "url": "https://your-username.github.io/eclogue/",
-    "image": "https://your-username.github.io/eclogue/assets/img/logo-placeholder.svg",
+    "url": "https://your-username.github.io/wrenley/",
+    "image": "https://your-username.github.io/wrenley/assets/img/projects/2.7.jpeg",
     "telephone": "+1-541-555-0130",
     "address": {
       "@type": "PostalAddress",
@@ -65,9 +65,9 @@
     <section class="container reveal">
       <h2>Case study: Pilot Butte driveway</h2>
       <div class="before-after" data-project="pilot-bend-drive">
-        <img src="assets/img/projects/pilot-drive-before.svg" alt="Pilot Butte driveway before" loading="lazy">
+        <img src="assets/img/projects/1.1.jpeg" alt="Pilot Butte driveway before" loading="lazy">
         <div class="before-after__after">
-          <img src="assets/img/projects/pilot-drive-after.svg" alt="Pilot Butte driveway after" loading="lazy">
+          <img src="assets/img/projects/1.3.jpeg" alt="Pilot Butte driveway after" loading="lazy">
         </div>
         <div class="before-after__slider" aria-hidden="true">
           <div class="before-after__handle" style="left: 50%">
