--- a/services.html
+++ b/services.html
@@ -15,16 +15,16 @@
   <meta property="og:title" content="Services | Wrenley Built">
   <meta property="og:description" content="Retaining walls, paver patios, and walkways engineered for Bend, Oregon.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://your-username.github.io/eclogue/services.html">
-  <meta property="og:image" content="https://your-username.github.io/eclogue/assets/img/hero-illustration.svg">
+  <meta property="og:url" content="https://your-username.github.io/wrenley/services.html">
+  <meta property="og:image" content="https://your-username.github.io/wrenley/assets/img/projects/2.6.jpeg">
   <meta name="twitter:card" content="summary_large_image">
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "MasonryContractor",
     "name": "Wrenley Built",
-    "url": "https://your-username.github.io/eclogue/",
-    "image": "https://your-username.github.io/eclogue/assets/img/logo-placeholder.svg",
+    "url": "https://your-username.github.io/wrenley/",
+    "image": "https://your-username.github.io/wrenley/assets/img/projects/2.6.jpeg",
     "telephone": "+1-541-555-0130",
     "address": {
       "@type": "PostalAddress",
@@ -69,7 +69,7 @@
           </ul>
         </div>
         <div>
-          <img src="assets/img/projects/deschutes-steps-1.svg" alt="Stone retaining wall and steps" loading="lazy">
+          <img src="assets/img/projects/2.3.jpeg" alt="Stone retaining wall and steps" loading="lazy">
         </div>
       </div>
     </section>
@@ -77,7 +77,7 @@
     <section id="pavers" class="container reveal">
       <div class="split">
         <div>
-          <img src="assets/img/projects/pilot-drive-1.svg" alt="Permeable paver driveway" loading="lazy">
+          <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway" loading="lazy">
         </div>
         <div>
           <h2>Paver patios &amp; driveways</h2>
@@ -103,7 +103,7 @@
           </ul>
         </div>
         <div>
-          <img src="assets/img/projects/riverstone-1.svg" alt="Flagstone walkway" loading="lazy">
+          <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway" loading="lazy">
         </div>
       </div>
     </section>
@@ -128,7 +128,7 @@
 
     <section class="container reveal">
       <h2>Ready to talk project scope?</h2>
-      <p>Share dimensions, desired materials, or inspiration photos. We'll build a detailed proposal.</p>
+      <p>Share dimensions, desired materials, or inspiration photos. We'll build a proposal.</p>
       <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
     </section>
   </main>
