--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
+       "@context": "https://schema.org",
     "@type": "MasonryContractor",
     "name": "Wrenley Built",
     "url": "https://your-username.github.io/wrenley/",
@@ -45,12 +45,29 @@
       <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="Wrenley Built"></a>
       <button class="mobile-toggle" type="button" aria-label="Toggle menu" aria-expanded="false">☰</button>
       <nav aria-label="Primary">
+        <a href="index.html" aria-current="page">Home</a>
         <a href="services.html">Services</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
-@@ -70,51 +70,51 @@
+  </header>
+  <main>
+    <section class="hero" data-parallax>
+      <div class="hero__overlay" aria-hidden="true"></div>
+      <div class="container hero__content">
+        <p class="hero__eyebrow">Stonework that endures</p>
+        <h1>Outdoor living spaces that stay level every winter</h1>
+        <p class="hero__intro">Wrenley Built engineers patios, walls, and walkways around Bend, OR with drainage, compaction, and detailing that stand up to freeze/thaw cycles.</p>
+        <div class="hero__actions">
+          <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
+          <a class="hero__link" href="services.html">See services</a>
+        </div>
+        <ul class="hero__points">
+          <li>Licensed, bonded, and insured in Oregon</li>
+          <li>Detailed prep with geotextile, compaction, and drainage</li>
+          <li>Material guidance from basalt to permeable pavers</li>
+        </ul>
       </div>
     </section>
 
