--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <script type="application/ld+json">
   {
-    "@context": "https://schema.org",
+      "@context": "https://schema.org",
     "@type": "MasonryContractor",
     "name": "Wrenley Built",
     "url": "https://your-username.github.io/wrenley/",
@@ -45,6 +45,7 @@
       <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="Wrenley Built"></a>
       <button class="mobile-toggle" type="button" aria-label="Toggle menu" aria-expanded="false">☰</button>
       <nav aria-label="Primary">
+        <a href="index.html">Home</a>
         <a href="services.html">Services</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html" aria-current="page">Contact</a>
