--- a/services.html
+++ b/services.html
@@ -45,6 +45,7 @@
       <a class="logo" href="index.html"><img src="assets/img/logo-placeholder.svg" alt="Wrenley Built"></a>
       <button class="mobile-toggle" type="button" aria-label="Toggle menu" aria-expanded="false">☰</button>
       <nav aria-label="Primary">
+        <a href="index.html">Home</a>
         <a href="services.html" aria-current="page">Services</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
@@ -52,83 +53,126 @@
     </div>
   </header>
   <main>
-    <section class="container reveal">
-      <h1>Hardscape services built for Bend, OR</h1>
-      <p class="lead">Every install is engineered for freeze/thaw, slope, and drainage so the finished surface stays level for years.</p>
+    <section class="hero hero--split hero--services" data-hero-rotator data-parallax>
+      <div class="container">
+        <div class="hero__copy">
+          <span class="badge">Services</span>
+          <h1>Stonework engineered for Bend's winters</h1>
+          <p class="hero__intro">From retaining walls to walkways, every Wrenley project is built on geotextile, compaction, and drainage tuned for Central Oregon's freeze/thaw cycle.</p>
+          <div class="hero__actions">
+            <a class="btn btn-primary" href="projects.html">View recent installs</a>
+            <a class="hero__link" href="contact.html#quote">Schedule a consult</a>
+          </div>
+          <ul class="hero__points">
+            <li>Owner-operated crew on every job</li>
+            <li>Detailed estimates and maintenance plans</li>
+            <li>Five-year workmanship guarantee</li>
+          </ul>
+        </div>
+        <div class="hero__gallery">
+          <figure class="hero__slide is-active" data-hero-slide>
+            <img src="assets/img/projects/2.3.jpeg" alt="Stone wall and steps with integrated lighting">
+          </figure>
+          <figure class="hero__slide" data-hero-slide>
+            <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway with snow-ready joints">
+          </figure>
+          <figure class="hero__slide" data-hero-slide>
+            <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway through landscaping">
+          </figure>
+        </div>
+      </div>
     </section>
 
-    <section id="masonry" class="container reveal">
-      <div class="split">
-        <div>
-          <h2>Stonemasonry</h2>
-          <p>Retaining walls, seat walls, fire features, outdoor kitchens, and veneers—each hand-set on a reinforced base.</p>
+    <section class="section section--accent reveal">
+      <h2>What we build</h2>
+      <p>Choose the scope that fits your home. Each service pairs craftsmanship with the engineering needed for the high desert.</p>
+      <div class="feature-grid">
+        <article class="feature-card" id="masonry">
+          <div class="feature-card__media">
+            <img src="assets/img/projects/2.4.jpeg" alt="Retaining wall with outdoor lighting">
+          </div>
+          <strong>Stonemasonry</strong>
+          <p>Retaining walls, seat walls, fire features, and veneers hand-set on reinforced bases with drainage and geogrid.</p>
           <ul class="list-check">
             <li>Basalt, granite, and natural stone sourced locally</li>
-            <li>Drainage and geogrid tiebacks engineered for slopes</li>
-            <li>Integrated lighting and caps for year-round use</li>
+            <li>Geogrid and drain tile engineered for slopes</li>
+            <li>Lighting, caps, and finish work for year-round use</li>
           </ul>
-        </div>
-        <div>
-          <img src="assets/img/projects/2.3.jpeg" alt="Stone retaining wall and steps" loading="lazy">
-        </div>
-      </div>
-    </section>
-
-    <section id="pavers" class="container reveal">
-      <div class="split">
-        <div>
-          <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway" loading="lazy">
-        </div>
-        <div>
-          <h2>Paver patios &amp; driveways</h2>
-          <p>Freeze/thaw-ready patios, driveways, and pool decks installed with polymeric sand and edging that resists movement.</p>
+        </article>
+        <article class="feature-card" id="pavers">
+          <div class="feature-card__media">
+            <img src="assets/img/projects/1.2.jpeg" alt="Crew installing paver base">
+          </div>
+          <strong>Paver patios &amp; driveways</strong>
+          <p>Patios, pool decks, and driveways installed with open-graded base, polymeric sand, and snow-ready edge restraint.</p>
           <ul class="list-check">
-            <li>3-step compaction with open graded base for drainage</li>
-            <li>Permeable options for stormwater compliance</li>
-            <li>Sealing and maintenance plan with every install</li>
+            <li>Permeable and traditional options</li>
+            <li>Three-stage compaction with geotextile</li>
+            <li>Sealing and maintenance guides included</li>
           </ul>
-        </div>
-      </div>
-    </section>
-
-    <section id="walkways" class="container reveal">
-      <div class="split">
-        <div>
-          <h2>Walkways &amp; paths</h2>
-          <p>Durable paths with consistent joints, slope control, and tidy transitions to turf, mulch, or plantings.</p>
+        </article>
+        <article class="feature-card" id="walkways">
+          <div class="feature-card__media">
+            <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway with ground cover">
+          </div>
+          <strong>Walkways &amp; paths</strong>
+          <p>Accessible paths and garden walks with consistent slope, tidy transitions, and integrated lighting.</p>
           <ul class="list-check">
-            <li>Accessible slopes and slip-resistant materials</li>
-            <li>Edge restraint and drainage to protect lawns</li>
-            <li>Integration with lighting and irrigation</li>
+            <li>Slip-resistant finishes and grading</li>
+            <li>Edge restraint to protect turf and beds</li>
+            <li>Irrigation and lighting coordination</li>
           </ul>
-        </div>
-        <div>
-          <img src="assets/img/projects/2.6.jpeg" alt="Flagstone walkway" loading="lazy">
-        </div>
+        </article>
       </div>
     </section>
 
     <section class="container reveal">
-      <h2>Our process</h2>
-      <div class="split">
-        <div>
-          <h3>1. Site consult</h3>
-          <p>We walk the property, assess grade, and capture elevations to plan drainage and material transitions.</p>
+      <h2>Project add-ons</h2>
+      <div class="feature-grid">
+        <article class="feature-card">
+          <strong>Outdoor kitchens</strong>
+          <p>Stone cladding, counter integration, and gas line coordination for cooking year-round.</p>
+        </article>
+        <article class="feature-card">
+          <strong>Water features</strong>
+          <p>Basalt bubbling boulders, reflective pools, and recirculating systems built for minimal maintenance.</p>
+        </article>
+        <article class="feature-card">
+          <strong>Lighting plans</strong>
+          <p>Low-voltage lighting layouts highlighting steps, paths, and architectural focal points.</p>
+        </article>
+      </div>
+    </section>
+
+    <section class="container reveal">
+      <h2>How we work</h2>
+      <div class="process-steps">
+        <div class="process-step">
+          <span>01</span>
+          <h3>Site consult</h3>
+          <p>We walk the property, assess grade, and map drainage so prep meets Bend's weather demands.</p>
         </div>
-        <div>
-          <h3>2. Engineering the base</h3>
-          <p>Compaction, geotextile, and edge restraint deliver stability through Bend winters.</p>
+        <div class="process-step">
+          <span>02</span>
+          <h3>Design &amp; estimate</h3>
+          <p>Detailed scope, schedule, and material palette built collaboratively so there are no surprises.</p>
         </div>
-        <div>
-          <h3>3. Finishing &amp; handoff</h3>
-          <p>Clean cuts, tight joints, and a maintenance guide keep your investment performing.</p>
+        <div class="process-step">
+          <span>03</span>
+          <h3>Build &amp; finish</h3>
+          <p>On-site crew handles excavation through finishing touches with daily communication.</p>
+        </div>
+        <div class="process-step">
+          <span>04</span>
+          <h3>Care &amp; maintenance</h3>
+          <p>We deliver cleaning tips, snow guidance, and optional seasonal servicing to keep everything dialed.</p>
         </div>
       </div>
     </section>
 
     <section class="container reveal">
       <h2>Ready to talk project scope?</h2>
-      <p>Share dimensions, desired materials, or inspiration photos. We'll build a proposal.</p>
+      <p>Share dimensions, desired materials, or inspiration photos. We'll build a proposal and schedule a site visit.</p>
       <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
     </section>
   </main>
