Add new project galleries and HEIC lightbox support

--- a/projects.html
+++ b/projects.html
@@ -196,6 +196,62 @@
             "after": "assets/img/projects/2.7.jpeg"
           },
           "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+        },
+        {
+          "id": "shevlin-paver-courtyard",
+          "title": "Paver Courtyard – Shevlin Ridge",
+          "tags": ["Pavers", "Patios", "Outdoor Living"],
+          "thumb": "assets/img/projects/6pave.heic",
+          "images": [
+            "assets/img/projects/1pave.heic",
+            "assets/img/projects/2pave.heic",
+            "assets/img/projects/3pave.heic",
+            "assets/img/projects/4pave.heic",
+            "assets/img/projects/5pave.heic",
+            "assets/img/projects/6pave.heic",
+            "assets/img/projects/7pave.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1pave.heic",
+            "after": "assets/img/projects/7pave.heic"
+          },
+          "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+        },
+        {
+          "id": "high-desert-retaining-wall",
+          "title": "Retaining Wall – High Desert Terrace",
+          "tags": ["Retaining Walls", "Steps", "Drainage"],
+          "thumb": "assets/img/projects/6retain.heic",
+          "images": [
+            "assets/img/projects/1retain.heic",
+            "assets/img/projects/2retain.heic",
+            "assets/img/projects/3retain.heic",
+            "assets/img/projects/4retain.heic",
+            "assets/img/projects/5retain.heic",
+            "assets/img/projects/6retain.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1retain.heic",
+            "after": "assets/img/projects/6retain.heic"
+          },
+          "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+        },
+        {
+          "id": "bend-backyard-refresh",
+          "title": "Backyard Refresh – Bend Eastside",
+          "tags": ["Landscaping", "Lawns", "Stonework"],
+          "thumb": "assets/img/projects/4yard.heic",
+          "images": [
+            "assets/img/projects/1yard.heic",
+            "assets/img/projects/2yard.heic",
+            "assets/img/projects/3yard.heic",
+            "assets/img/projects/4yard.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1yard.heic",
+            "after": "assets/img/projects/4yard.heic"
+          },
+          "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
         }
       ]
     }
