--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="mosaic">
         <figure>
           <img src="assets/img/projects/1.2.jpeg" alt="Crew laying a permeable paver base">
-          <figcaption>Permeable paver driveway • Pilot Butte</figcaption>
+          <figcaption>Permeable paver driveway install</figcaption>
         </figure>
         <figure>
           <img src="assets/img/projects/2.1.jpeg" alt="Slope before step installation">
@@ -107,7 +107,7 @@
         </figure>
         <figure>
           <img src="assets/img/projects/2.7.jpeg" alt="Finished basalt steps with lighting">
-          <figcaption>Terraced steps • Deschutes River Trail</figcaption>
+          <figcaption>Terraced basalt step system</figcaption>
         </figure>
       </div>
     </section>
@@ -174,7 +174,7 @@
     <section class="container reveal">
       <header>
         <h2>Recent projects</h2>
-        <p>Browse installs ranging from permeable paver driveways to terraced stonework along the Deschutes.</p>
+        <p>Browse installs ranging from permeable paver driveways to terraced stonework across Central Oregon.</p>
       </header>
       <div id="filters" class="filters" aria-label="Project filters"></div>
       <div id="gallery" class="gallery" data-source="assets/data/projects.json"></div>
@@ -298,7 +298,8 @@
       "projects": [
         {
           "id": "pilot-bend-drive",
-          "title": "Paver Driveway – Pilot Butte",
+          "category": "Paver Installations",
+          "title": "Permeable Driveway Rebuild",
           "tags": ["Pavers", "Driveways"],
           "thumb": "assets/img/projects/1.3.jpeg",
           "images": [
@@ -318,8 +319,30 @@
           }
         },
         {
+          "id": "shevlin-paver-courtyard",
+          "category": "Paver Installations",
+          "title": "Courtyard Paver Patio",
+          "tags": ["Pavers", "Patios", "Outdoor Living"],
+          "thumb": "assets/img/projects/6pave.heic",
+          "images": [
+            "assets/img/projects/1pave.heic",
+            "assets/img/projects/2pave.heic",
+            "assets/img/projects/3pave.heic",
+            "assets/img/projects/4pave.heic",
+            "assets/img/projects/5pave.heic",
+            "assets/img/projects/6pave.heic",
+            "assets/img/projects/7pave.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1pave.heic",
+            "after": "assets/img/projects/7pave.heic"
+          },
+          "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+        },
+        {
           "id": "deschutes-steps",
-          "title": "Terraced Steps – Deschutes River Trail",
+          "category": "Retaining Walls & Steps",
+          "title": "Terraced Step System",
           "tags": ["Steps", "Masonry", "Retaining Walls"],
           "thumb": "assets/img/projects/2.7.jpeg",
           "images": [
@@ -338,6 +361,44 @@
             "after": "assets/img/projects/2.7.jpeg"
           },
           "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+        },
+        {
+          "id": "high-desert-retaining-wall",
+          "category": "Retaining Walls & Steps",
+          "title": "Tiered Block Retaining Wall",
+          "tags": ["Retaining Walls", "Steps", "Drainage"],
+          "thumb": "assets/img/projects/6retain.heic",
+          "images": [
+            "assets/img/projects/1retain.heic",
+            "assets/img/projects/2retain.heic",
+            "assets/img/projects/3retain.heic",
+            "assets/img/projects/4retain.heic",
+            "assets/img/projects/5retain.heic",
+            "assets/img/projects/6retain.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1retain.heic",
+            "after": "assets/img/projects/6retain.heic"
+          },
+          "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+        },
+        {
+          "id": "bend-backyard-refresh",
+          "category": "Yard & Turf Installs",
+          "title": "Backyard Lawn & Stone Border",
+          "tags": ["Landscaping", "Lawns", "Stonework"],
+          "thumb": "assets/img/projects/4yard.heic",
+          "images": [
+            "assets/img/projects/1yard.heic",
+            "assets/img/projects/2yard.heic",
+            "assets/img/projects/3yard.heic",
+            "assets/img/projects/4yard.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1yard.heic",
+            "after": "assets/img/projects/4yard.heic"
+          },
+          "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
         }
       ]
     }
