--- a/index.html
+++ b/index.html
@@ -56,23 +56,37 @@
     <section class="hero hero--split" data-parallax data-hero-rotator>
       <div class="container">
         <div class="hero__copy">
-          <span class="badge">Bend, Oregon</span>
-          <p class="hero__eyebrow">Stonework that endures</p>
-          <h1>Outdoor living spaces shaped for high-desert life</h1>
-          <p class="hero__intro">Wrenley Built engineers patios, walls, and walkways with drainage, compaction, and finishing built to ride out freeze/thaw seasons.</p>
-          <div class="hero__actions">
-            <a class="btn btn-primary" href="contact.html#quote">Request a quote</a>
-            <a class="hero__link" href="projects.html">View the gallery</a>
+          <div class="hero-eyebrow">
+            <span class="badge badge--on-hero">
+              <span aria-hidden="true">●</span> Bend, Oregon
+            </span>
           </div>
-          <ul class="hero__points">
-            <li>Laser-aligned layout with rigid edge restraint</li>
-            <li>Geotextile, drainage, and compaction tuned to your soil</li>
+          <h1>Outdoor living spaces shaped for high-desert life</h1>
+          <p class="hero__intro">Wrenley Built crafts stonemasonry, paver patios, and walkways that hold up through Bend’s freeze/thaw seasons.</p>
+          <div class="hero__actions cta-row">
+            <a class="btn btn-primary" href="/contact.html#quote">Request a quote</a>
+            <a class="btn btn-outline" href="/projects.html">View the gallery</a>
+          </div>
+          <ul class="hero__points hero-points">
+            <li>String-line layout with clean edges and consistent joints</li>
+            <li>Base, drainage, and compaction sized for your site</li>
             <li>Owner-operated crew from demo to final sweep</li>
           </ul>
-          <div class="hero__stats">
-            <div class="hero__stat"><strong>15 yrs</strong><span>Combined craft on the tools</span></div>
-            <div class="hero__stat"><strong>40+</strong><span>Central Oregon installs</span></div>
-            <div class="hero__stat"><strong>5 yr</strong><span>Workmanship guarantee</span></div>
+          <div class="trust-highlights">
+            <ul class="cards">
+              <li>
+                <h4>Owner-operated</h4>
+                <p>You work with the crew that’s on your site.</p>
+              </li>
+              <li>
+                <h4>Built for Bend winters</h4>
+                <p>Freeze/thaw-ready base and edge restraint.</p>
+              </li>
+              <li>
+                <h4>We stand by our work</h4>
+                <p>If we caused an issue, we make it right.</p>
+              </li>
+            </ul>
           </div>
         </div>
         <div class="hero__gallery">
@@ -94,12 +108,12 @@
 
     <section class="section section--accent reveal">
       <span class="eyebrow">Signature installs</span>
-      <h2>Stone, steel, and light arranged for four seasons</h2>
-      <p class="lead">Every detail is engineered for Bend's temperature swings—so your investment looks as strong in February as it does in July.</p>
+      <h2>Built for Bend winters</h2>
+      <p class="lead">Details that keep patios, steps, and paths looking sharp—February through July.</p>
       <div class="mosaic">
         <figure>
           <img src="assets/img/projects/1.2.jpeg" alt="Crew laying a permeable paver base">
-          <figcaption>Permeable paver driveway • Pilot Butte</figcaption>
+          <figcaption>Permeable paver driveway install</figcaption>
         </figure>
         <figure>
           <img src="assets/img/projects/2.1.jpeg" alt="Slope before step installation">
@@ -107,7 +121,7 @@
         </figure>
         <figure>
           <img src="assets/img/projects/2.7.jpeg" alt="Finished basalt steps with lighting">
-          <figcaption>Terraced steps • Deschutes River Trail</figcaption>
+          <figcaption>Terraced basalt step system</figcaption>
         </figure>
       </div>
     </section>
@@ -174,7 +188,7 @@
     <section class="container reveal">
       <header>
         <h2>Recent projects</h2>
-        <p>Browse installs ranging from permeable paver driveways to terraced stonework along the Deschutes.</p>
+        <p>Browse installs ranging from permeable paver driveways to terraced stonework across Central Oregon.</p>
       </header>
       <div id="filters" class="filters" aria-label="Project filters"></div>
       <div id="gallery" class="gallery" data-source="assets/data/projects.json"></div>
@@ -298,7 +312,8 @@
       "projects": [
         {
           "id": "pilot-bend-drive",
-          "title": "Paver Driveway – Pilot Butte",
+          "category": "Paver Installations",
+          "title": "Permeable Driveway Rebuild",
           "tags": ["Pavers", "Driveways"],
           "thumb": "assets/img/projects/1.3.jpeg",
           "images": [
@@ -318,8 +333,30 @@
           }
         },
         {
+          "id": "shevlin-paver-courtyard",
+          "category": "Paver Installations",
+          "title": "Courtyard Paver Patio",
+          "tags": ["Pavers", "Patios", "Outdoor Living"],
+          "thumb": "assets/img/projects/6pave.heic",
+          "images": [
+            "assets/img/projects/1pave.heic",
+            "assets/img/projects/2pave.heic",
+            "assets/img/projects/3pave.heic",
+            "assets/img/projects/4pave.heic",
+            "assets/img/projects/5pave.heic",
+            "assets/img/projects/6pave.heic",
+            "assets/img/projects/7pave.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1pave.heic",
+            "after": "assets/img/projects/7pave.heic"
+          },
+          "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+        },
+        {
           "id": "deschutes-steps",
-          "title": "Terraced Steps – Deschutes River Trail",
+          "category": "Retaining Walls & Steps",
+          "title": "Terraced Step System",
           "tags": ["Steps", "Masonry", "Retaining Walls"],
           "thumb": "assets/img/projects/2.7.jpeg",
           "images": [
@@ -338,6 +375,44 @@
             "after": "assets/img/projects/2.7.jpeg"
           },
           "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+        },
+        {
+          "id": "high-desert-retaining-wall",
+          "category": "Retaining Walls & Steps",
+          "title": "Tiered Block Retaining Wall",
+          "tags": ["Retaining Walls", "Steps", "Drainage"],
+          "thumb": "assets/img/projects/6retain.heic",
+          "images": [
+            "assets/img/projects/1retain.heic",
+            "assets/img/projects/2retain.heic",
+            "assets/img/projects/3retain.heic",
+            "assets/img/projects/4retain.heic",
+            "assets/img/projects/5retain.heic",
+            "assets/img/projects/6retain.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1retain.heic",
+            "after": "assets/img/projects/6retain.heic"
+          },
+          "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+        },
+        {
+          "id": "bend-backyard-refresh",
+          "category": "Yard & Turf Installs",
+          "title": "Backyard Lawn & Stone Border",
+          "tags": ["Landscaping", "Lawns", "Stonework"],
+          "thumb": "assets/img/projects/4yard.heic",
+          "images": [
+            "assets/img/projects/1yard.heic",
+            "assets/img/projects/2yard.heic",
+            "assets/img/projects/3yard.heic",
+            "assets/img/projects/4yard.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1yard.heic",
+            "after": "assets/img/projects/4yard.heic"
+          },
+          "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
         }
       ]
     }
