--- a/projects.html
+++ b/projects.html
@@ -71,13 +71,13 @@
         </div>
         <div class="hero__gallery">
           <figure class="hero__slide is-active" data-hero-slide>
-            <img src="assets/img/projects/2.7.jpeg" alt="Basalt steps overlooking the Deschutes">
+            <img src="assets/img/projects/2.7.jpeg" data-heic-src="assets/img/projects/6retain.heic" data-heic-fallback="assets/img/projects/2.7.jpeg" alt="Tiered retaining wall with stone steps">
           </figure>
           <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/1.3.jpeg" alt="Permeable paver driveway at sunset">
+            <img src="assets/img/projects/1.3.jpeg" data-heic-src="assets/img/projects/7pave.heic" data-heic-fallback="assets/img/projects/1.3.jpeg" alt="Courtyard paver patio with contrasting border">
           </figure>
           <figure class="hero__slide" data-hero-slide>
-            <img src="assets/img/projects/2.6.jpeg" alt="Flagstone path with native landscaping">
+            <img src="assets/img/projects/2.6.jpeg" data-heic-src="assets/img/projects/4yard.heic" data-heic-fallback="assets/img/projects/2.6.jpeg" alt="Sodded backyard edged with stonework">
           </figure>
         </div>
       </div>
@@ -94,13 +94,13 @@
     </section>
 
     <section class="container reveal">
-      <h2>Case study: Pilot Butte driveway</h2>
+      <h2>Case study: Permeable paver driveway</h2>
       <div class="split">
         <div>
           <div class="before-after" data-project="pilot-bend-drive">
-            <img src="assets/img/projects/1.1.jpeg" alt="Pilot Butte driveway before" loading="lazy">
+            <img src="assets/img/projects/1.1.jpeg" alt="Driveway before construction" loading="lazy">
             <div class="before-after__after">
-              <img src="assets/img/projects/1.3.jpeg" alt="Pilot Butte driveway after" loading="lazy">
+              <img src="assets/img/projects/1.3.jpeg" alt="Driveway after permeable paver install" loading="lazy">
             </div>
             <div class="before-after__slider" aria-hidden="true">
               <div class="before-after__handle" style="left: 50%">
@@ -156,7 +156,8 @@
       "projects": [
         {
           "id": "pilot-bend-drive",
-          "title": "Paver Driveway – Pilot Butte",
+          "category": "Paver Installations",
+          "title": "Permeable Driveway Rebuild",
           "tags": ["Pavers", "Driveways"],
           "thumb": "assets/img/projects/1.3.jpeg",
           "images": [
@@ -176,8 +177,31 @@
           }
         },
         {
+          "id": "shevlin-paver-courtyard",
+          "category": "Paver Installations",
+          "title": "Courtyard Paver Patio",
+          "tags": ["Pavers", "Patios", "Outdoor Living"],
+          "thumb": "assets/img/projects/6pave.heic",
+          "placeholder": "assets/img/projects/1.3.jpeg",
+          "images": [
+            "assets/img/projects/1pave.heic",
+            "assets/img/projects/2pave.heic",
+            "assets/img/projects/3pave.heic",
+            "assets/img/projects/4pave.heic",
+            "assets/img/projects/5pave.heic",
+            "assets/img/projects/6pave.heic",
+            "assets/img/projects/7pave.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1pave.heic",
+            "after": "assets/img/projects/7pave.heic"
+          },
+          "summary": "Rebuilt a weathered patio with permeable pavers, drainage stone, and a new seating edge."
+        },
+        {
           "id": "deschutes-steps",
-          "title": "Terraced Steps – Deschutes River Trail",
+          "category": "Retaining Walls & Steps",
+          "title": "Terraced Step System",
           "tags": ["Steps", "Masonry", "Retaining Walls"],
           "thumb": "assets/img/projects/2.7.jpeg",
           "images": [
@@ -196,10 +220,52 @@
             "after": "assets/img/projects/2.7.jpeg"
           },
           "summary": "Basalt steps tied into a low retaining wall to manage slope transitions."
+        },
+        {
+          "id": "high-desert-retaining-wall",
+          "category": "Retaining Walls & Steps",
+          "title": "Tiered Block Retaining Wall",
+          "tags": ["Retaining Walls", "Steps", "Drainage"],
+          "thumb": "assets/img/projects/6retain.heic",
+          "placeholder": "assets/img/projects/2.7.jpeg",
+          "images": [
+            "assets/img/projects/1retain.heic",
+            "assets/img/projects/2retain.heic",
+            "assets/img/projects/3retain.heic",
+            "assets/img/projects/4retain.heic",
+            "assets/img/projects/5retain.heic",
+            "assets/img/projects/6retain.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1retain.heic",
+            "after": "assets/img/projects/6retain.heic"
+          },
+          "summary": "Segmental block wall with stone steps and subsurface drainage to hold the hillside in place."
+        },
+        {
+          "id": "bend-backyard-refresh",
+          "category": "Yard & Turf Installs",
+          "title": "Backyard Lawn & Stone Border",
+          "tags": ["Landscaping", "Lawns", "Stonework"],
+          "thumb": "assets/img/projects/4yard.heic",
+          "placeholder": "assets/img/projects/2.6.jpeg",
+          "images": [
+            "assets/img/projects/1yard.heic",
+            "assets/img/projects/2yard.heic",
+            "assets/img/projects/3yard.heic",
+            "assets/img/projects/4yard.heic"
+          ],
+          "beforeAfter": {
+            "before": "assets/img/projects/1yard.heic",
+            "after": "assets/img/projects/4yard.heic"
+          },
+          "summary": "New lawn install with stone border, soil prep, irrigation tuning, and fresh sod delivery."
         }
       ]
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/heic2any@0.0.3/dist/heic2any.min.js" defer></script>
+  <script src="assets/js/heic-loader.js" defer></script>
   <script src="assets/js/main.js" defer></script>
   <script src="assets/js/data.js" defer></script>
   <script src="assets/js/gallery.js" defer></script>
