Use hero badges with white text on interior pages

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     <section class="hero hero--split hero--contact" id="quote">
       <div class="container">
         <div class="hero__copy">
-          <span class="badge">Let's build</span>
+          <span class="badge badge--on-hero">Let's build</span>
           <h1>Share your project vision</h1>
           <p class="hero__intro">Tell us about your site, timelines, and materials. We'll schedule a consult and outline a build plan tailored to Bend's climate.</p>
           <ul class="hero__points">
