--- a/services.html
+++ b/services.html
@@ -56,7 +56,7 @@
     <section class="hero hero--split hero--services" data-hero-rotator data-parallax>
       <div class="container">
         <div class="hero__copy">
-          <span class="badge">Services</span>
+          <span class="badge badge--on-hero">Services</span>
           <h1>Stonework engineered for Bend's winters</h1>
           <p class="hero__intro">From retaining walls to walkways, every Wrenley project is built on geotextile, compaction, and drainage tuned for Central Oregon's freeze/thaw cycle.</p>
           <div class="hero__actions">
